@@ -1,13 +1,15 @@
-package org.api;
+package org.mpack;
 
 import com.thedeanda.lorem.Lorem;
 import com.thedeanda.lorem.LoremIpsum;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.bson.Document;
+import org.jetbrains.annotations.NotNull;
 import org.mpack.MongoDB;
 import org.mpack.QueryProcessor;
 import org.mpack.Ranker;
+import org.mpack.collections;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.data.util.Pair;
@@ -15,11 +17,11 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.awt.*;
 import java.io.FileNotFoundException;
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.net.URI;
+import java.util.*;
 import java.util.List;
-import java.util.PriorityQueue;
 
 @SpringBootApplication
 public class ApiMain {
@@ -55,40 +57,39 @@ class Api {
         mongoDB.addToSuggestionsArray(SearchQ);
 
         QueryProcessor Q = new QueryProcessor();
-        HashMap<Integer, ArrayList<Document>> documents = Q.QueryProcessingFunction(SearchQ);
+
+        List<List<Document>> documents = Q.Stem(List.of(SearchQ.toLowerCase().trim().split(" ")));
+
         System.out.println("QUERY");
         System.out.println(documents);
 
         Ranker R = new Ranker();
-        Pair< PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double, Pair<Double, Integer>>>>>, PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double, Pair<Double, Integer>>>>>> KP = R.ranker("", documents);
-        PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double, Pair<Double, Integer>>>>> K = KP.getFirst();
-        PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double, Pair<Double, Integer>>>>> P = KP.getSecond();
-        System.out.println("PRIORITY0");
-        System.out.println(K);
-        System.out.println("PRIORITY1");
-        System.out.println(P);
-        var ts = Q.GetSearchTokens();
-        for (var p : K) {
-            // p (   <url,pair<para,header>>     |                           )
-            var f = p.getFirst();
-            String url = f.getFirst();
-            var ss = f.getSecond();
-            String header = ss.getFirst();
-            String para = ss.getSecond();
-            Pojo p1 = new Pojo(url, header, ts, para);
-            objectsList.add(p1);
-        }
-        for (var p : P) {
-            // p (   <url,pair<para,header>>     |                           )
-            var f = p.getFirst();
-            String url = f.getFirst();
-            var ss = f.getSecond();
-            String header = ss.getFirst();
-            String para = ss.getSecond();
-            Pojo p1 = new Pojo(url, header, ts, para);
-            objectsList.add(p1);
+        LinkedHashSet<collections> finalResults = new LinkedHashSet<>();
+        for (List<Document> v :
+                documents) {
+            if (v == null || v.isEmpty() || v.get(0) == null) {
+                continue;
+            }
+
+            PriorityQueue<Pair<String, collections>> ret = R.ranker2("", v);
+            for (var a :
+                    ret) {
+                finalResults.add(a.getSecond());
+            }
         }
 
+        System.out.println("PRIORITY0");
+        System.out.println(finalResults);
+
+        var ts = List.of(SearchQ.trim().split(" "));
+        for (var p : finalResults) {
+
+            // p (   <url,pair<para,header>>     |                           )
+
+            Pojo p1 = new Pojo(p.url, p.title, ts, p.paragraph);
+            objectsList.add(p1);
+        }
+        System.out.println("Sending with size: " + objectsList.size());
         return objectsList;
     }
 
