@@ -2,6 +2,8 @@ package org.mpack;
 
 import ca.rmen.porterstemmer.PorterStemmer;
 
+import ch.qos.logback.classic.Level;
+import ch.qos.logback.classic.Logger;
 import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
@@ -10,7 +12,7 @@ import java.util.*;
 
 import org.jetbrains.annotations.NotNull;
 import org.jsoup.Jsoup;
-import org.jsoup.nodes.Document;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.util.Pair;
 
 import java.util.ArrayList;
@@ -25,13 +27,17 @@ public class Indexer {
     HashMap<String, Set<String>> equivalentStems = new HashMap<>();
 
     long documentsCount;
+    static Logger root = (Logger) LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
+
+    static {
+        root.setLevel(Level.OFF);
+    }
 
     public static void main(String[] arg) throws FileNotFoundException {
 
         Indexer obj = new Indexer();
         obj.documentsCount = mongoDB.getDocCount();
         //get crawled docs
-
         HashMap<String, Pair<Float, String>> htmlDocs = mongoDB.getHTML();
         ///      url     body
 
@@ -40,43 +46,29 @@ public class Indexer {
         ArrayList<String> header;
         HashMap<Character, List<String>> stopWords = obj.constructStopWords();
 
-
+        int count = 20000;
+        while (count == 0) count--;
         for (Map.Entry<String, Pair<Float, String>> set : htmlDocs.entrySet()) {
             docFlags = new ArrayList<>(2);
             for (int i = 0; i < 2; i++)
                 docFlags.add(i, new HashMap<>());
+
             title = new ArrayList<>();
             header = new ArrayList<>();
 
-
-            Pair<String, List<String>> parsedHTML = obj.parseHTML(set.getValue().getSecond(), title, header);
+            String parsedHTML = obj.parseHTML(set.getValue().getSecond(), title, header);
 
             obj.extractFlags(docFlags, title, header);
-            List<String> tokens = obj.extractWords(parsedHTML.getFirst());
-            mongoDB.StoreTextUrl(parsedHTML.getSecond(), set.getKey());
-            obj.removeStopWords(tokens, stopWords);
-            obj.stemWord(tokens);
+            Pair<List<List<String>>, List<Integer>> tokens = obj.extractWords(parsedHTML);
+            tokens.getFirst().get(1).add(0, title.get(0));
+            mongoDB.storeTextUrl((ArrayList<String>) tokens.getFirst().get(1), set.getKey());
+            obj.removeStopWords(tokens.getFirst().get(0), stopWords);
+            obj.stemWord(tokens.getFirst().get(0));
 
             obj.invertedFile(set.getKey(), tokens, docFlags, set.getValue().getFirst());
 
         }
 
-        //////////////////////////////test ranker:
-
-        Ranker ranker = new Ranker();
-        HashMap<Integer, ArrayList<String>> retDoc = new HashMap<>();
-        ArrayList<String> words = new ArrayList<String>();
-        int i = 0;
-        for (Map.Entry<String, HashMap<String, WordInfo>> entry : obj.invertedFile.entrySet()) {
-            words.add(entry.getKey());
-            i++;
-            if (i == 5) break;
-        }
-        retDoc.put(0, words);
-        retDoc.put(1, new ArrayList<>());
-        //System.out.println(ranker.ranker(retDoc));
-
-///////////////////////////////////////////////////////////////
         mongoDB.StoreStemming(obj.equivalentStems);
         mongoDB.insertInvertedFile(obj.invertedFile, obj.documentsCount);
 
@@ -86,14 +78,12 @@ public class Indexer {
     public Indexer() {
 
         invertedFile = new HashMap<>();
-
-        // id     documents  id       fields & values <TF, POSITION, FLAG>
     }
 
     //read the stop words
     public static @NotNull HashMap<Character, List<String>> constructStopWords() throws FileNotFoundException {
         //read the file contains stop words
-        File file = new File(".\\attaches\\stopwords.txt");
+        File file = new File("C:\\Users\\aatta\\eclipse-workspace\\APTProject\\Core\\attaches\\stopwords.txt");
 
         Scanner scan = new Scanner(file);
 
@@ -115,55 +105,71 @@ public class Indexer {
         return stopWords;
     }
 
-    Pair<String, List<String>> parseHTML(String HTMLText, ArrayList<String> title, ArrayList<String> header) {
+    String parseHTML(String HTMLText, ArrayList<String> title, ArrayList<String> header) {
+
+
+        String[] toRemove = {"button", "input", "style", "script", "dfn", "span", "svg", "code", "samp", "kbd", "var", "pre"};
+
         org.jsoup.nodes.Document parsed;
         parsed = Jsoup.parse(HTMLText);
+
+        title.add(parsed.title());
+
         if (!parsed.getElementsByTag("main").isEmpty())
-            parsed = Jsoup.parse(parsed.getElementsByTag("main").first().toString());
-        parsed.select("button").remove();
-        parsed.select("input").remove();
+            parsed = Jsoup.parse(Objects.requireNonNull(parsed.getElementsByTag("main").first()).toString());
 
-        List<String> pText = parsed.getElementsByTag("p").eachText();
-        if (parsed.getElementsByTag("title").first() != null)
-            pText.add(0, parsed.getElementsByTag("title").first().text());
-        else
-            pText.add(0, "");
-        pText.add(1, parsed.getElementsByTag("meta").attr("description"));
-        //parsed.select("style").remove();
-        //parsed.select("script").remove();
+        for (String s : toRemove)
+            parsed.select(s).remove();
 
-        title.addAll(parsed.getElementsByTag("title").eachText());
         header.addAll(parsed.getElementsByTag("header").eachText());
         header.addAll(parsed.getElementsByTag("h1").eachText());
 
-        return Pair.of(parsed.text(), pText);
+
+        return parsed.text();
     }
 
-    List<String> extractWords(@NotNull String text) {
-        List<String> wordList = new ArrayList<>();
+    Pair<List<List<String>>, List<Integer>> extractWords(@NotNull String text) {
+
+        Pair<List<List<String>>, List<Integer>> wordList;
+        wordList = Pair.of(new ArrayList<>(), new ArrayList<>());
+        StringBuilder original = new StringBuilder();
+
         StringBuilder word = new StringBuilder();
+        wordList.getFirst().add(new ArrayList<>());
+        wordList.getFirst().add(new ArrayList<>());
+        int position = -1;
         char c;
         for (int i = 0; i < text.length(); i++) {
             c = text.charAt(i);
-            if (c <= 'z' && c >= 'a' || c <= 'Z' && c >= 'A' || c <= '9' && c >= '0')
+            if (c <= 'z' && c >= 'a' || c <= 'Z' && c >= 'A' || c <= '9' && c >= '0' || c == '+' || c == '-') {
                 word.append(c);
-            else {
+                original.append(c);
+            } else if (c == ' ') {
+                if (original.isEmpty()) continue;
+                position++;
+
+                wordList.getFirst().get(1).add(original.toString());
+                wordList.getSecond().add(position);
+
                 if (word.isEmpty()) continue;
-                if (!StringUtils.isNumeric(word.toString()))
-                    wordList.add(word.toString().toLowerCase(Locale.ROOT));
+                if (!StringUtils.isNumeric(word.toString()) && !(word.equals('+') || word.equals('-'))) {
+                    wordList.getFirst().get(0).add(word.toString().toLowerCase(Locale.ROOT));
+                }
+
                 word = new StringBuilder();
-            }
+                original = new StringBuilder();
+            } else original.append(c);
         }
         return wordList;
     }
 
 
     //remove them
-    public static void removeStopWords(@NotNull List<String> tokens, HashMap<Character, List<String>> stopWords) {
+    public static void removeStopWords(List<String> tokens, HashMap<Character, List<String>> stopWords) {
         for (int i = 0; i < tokens.size(); i++) {
 
             //if ((tokens.get(i).charAt(0) - 48) >= 0 || (tokens.get(i).charAt(0) - 48) <= 9)
-            if(stopWords.get(tokens.get(i).charAt(0)) == null)
+            if (stopWords.get(tokens.get(i).charAt(0)) == null)
                 continue;
             if (stopWords.get(tokens.get(i).charAt(0)).contains(tokens.get(i).toLowerCase(Locale.ROOT)))
             //if (stopWords.contains(tokens.get(i).toLowerCase(Locale.ROOT)))
@@ -176,7 +182,7 @@ public class Indexer {
     }
 
 
-    private void stemWord(@NotNull List<String> tokens) {
+    private void stemWord(List<String> tokens) {
         PorterStemmer stem = new PorterStemmer();
         for (String token : tokens) {
             String result = stem.stemWord(token);
@@ -191,40 +197,40 @@ public class Indexer {
     }
 
 
-    private void invertedFile(String docURL, List<String> tokens, ArrayList<HashMap<String, Integer>> docFlags, float pageRank) {
-        for (int i = 0; i < tokens.size(); i++) {
+    private void invertedFile(String docURL, Pair<List<List<String>>, List<Integer>> tokens, ArrayList<HashMap<String, Integer>> docFlags, float pageRank) {
+        for (int i = 0; i < tokens.getFirst().get(0).size(); i++) {
 
-            if (invertedFile.containsKey(tokens.get(i))) {
+            if (invertedFile.containsKey(tokens.getFirst().get(0).get(i))) {
                 //then go and update the positions in for this word in this doc
                 //but first check if the doc exists or not
-                if (invertedFile.get(tokens.get(i)).containsKey(docURL)) {
+                if (invertedFile.get(tokens.getFirst().get(0).get(i)).containsKey(docURL)) {
                     //then update
-                    invertedFile.get(tokens.get(i)).get(docURL).addPosition(i);
-                    invertedFile.get(tokens.get(i)).get(docURL).incTF();
+                    invertedFile.get(tokens.getFirst().get(0).get(i)).get(docURL).addPosition(tokens.getSecond().get(i));
+                    invertedFile.get(tokens.getFirst().get(0).get(i)).get(docURL).incTF();
                 } else {
                     //then create it
                     WordInfo container = new WordInfo();
-                    container.addPosition(i);
+                    container.addPosition(tokens.getSecond().get(i));
                     container.incTF();
                     container.setPageRank(pageRank);
                     for (short k = 0; k < docFlags.size(); k++) {
-                        container.setFlags(k, docFlags.get(k).getOrDefault(tokens.get(i), 0));
+                        container.setFlags(k, docFlags.get(k).getOrDefault(tokens.getFirst().get(0).get(i), 0));
                     }
-                    invertedFile.get(tokens.get(i)).put(docURL, container);
+                    invertedFile.get(tokens.getFirst().get(0).get(i)).put(docURL, container);
                 }
 
             } else {
                 HashMap<String, WordInfo> docMap = new HashMap<>();
                 WordInfo container = new WordInfo();
-                container.addPosition(i);
+                container.addPosition(tokens.getSecond().get(i));
                 container.incTF();
                 container.setPageRank(pageRank);
                 docMap.put(docURL, container);
 
                 for (short k = 0; k < docFlags.size(); k++) {
-                    container.setFlags(k, docFlags.get(k).getOrDefault(tokens.get(i), 0));
+                    container.setFlags(k, docFlags.get(k).getOrDefault(tokens.getFirst().get(0).get(i), 0));
                 }
-                invertedFile.put(tokens.get(i), docMap);
+                invertedFile.put(tokens.getFirst().get(0).get(i), docMap);
             }
 
         }
@@ -235,7 +241,7 @@ public class Indexer {
         List<String> temp;
         int k;
         for (String item : title) {
-            temp = extractWords(item);
+            temp = extractWords(item).getFirst().get(0);
             for (String s : temp) {
                 k = 0;
                 if (docFlags.get(0).containsKey(s)) {
@@ -247,7 +253,7 @@ public class Indexer {
             }
         }
         for (String s : header) {
-            temp = extractWords(s);
+            temp = extractWords(s).getFirst().get(0);
             for (String value : temp) {
                 k = 0;
                 if (docFlags.get(1).containsKey(value)) {
